fixed projects header alignment

--- a/src/Styles/about.css
+++ b/src/Styles/about.css
@@ -141,10 +141,14 @@ img {
     flex-direction: column;
   }
 
+  .projects {
+    padding-left: 2px;
+  }
+
   .projects .two-lines-first, .two-lines-second {
     display: flex;
     justify-content: center;
-    padding-right: 19px;
+
   }
 
   .projects .two-lines-first {
